--- a/test.html
+++ b/test.html
@@ -1,13 +1,28 @@
 <html>
 <head>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
 <style>
-#box {
+#machin {
 	position: absolute;
 	width: 50px;
 	height: 50px;
 	background: red;
+}
+#truc {
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	background: rgb(28, 121, 28);
+}
+
+#omkItem {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	padding: 4px;
+	background: rgba(173, 190, 173, 0.39);
 }
 
 body {
@@ -17,41 +32,83 @@ body {
 
 </style>
 
-<div id="box"></div>
+<div id="machin"></div>
+<div id="truc"></div>
+<img id="monImage"></img>
+<div id="omkItem"></div>
 <script type="module">
 
-import { Timeliner } from './build/timeliner.min.js'
+import { Timeliner } from './src/timeliner.js'
 
-var target = {
-	x: 0,
-	y: 0,
-	rotate: 0
-};
+var actions = {};
 
 // initialize timeliner
-var timeliner = new Timeliner(target);
-// timeliner.addLayer('x');
-// timeliner.addLayer('y');
-// timeliner.addLayer('rotate');
+var timeliner = new Timeliner(actions);
+d3.json('timeliner-noeudgordien.json').then(function(json){
+	timeliner.load(json);
+});
 
-// var o = {"version":"1.2.0","modified":"Mon Dec 08 2014 10:41:11 GMT+0800 (SGT)","title":"Untitled", "layers": [{"name":"x","values":[],"tmpValue":0,"_color":"#10b00d"},{"name":"y","values":[{"time":0,"value":-1.2999770000000004,"_color":"#4a2392","tween":"quadEaseIn"},{"time":3.3,"value":-1.1999850000000003,"_color":"#cddfd8"}],"tmpValue":-1.2999770000000004,"_color":"#344260"},{"name":"rotate","values":[{"time":0,"value":4.200005,"_color":"#ec9bb5","tween":"quadEaseInOut"},{"time":2.1,"value":28.000009,"_color":"#ac8e14","tween":"quadEaseIn"},{"time":5,"value":50.400018,"_color":"#5c659"}],"tmpValue":50.400018,"_color":"#1fa995"}]};
-// timeliner.load(o);
-
-
-timeliner.load({"version":"1.2.0","modified":"Mon Dec 08 2014 10:41:11 GMT+0800 (SGT)","title":"Untitled","layers":[{"name":"x","values":[{"time":0.1,"value":0,"_color":"#893c0f","tween":"quadEaseIn"},{"time":3,"value":3.500023,"_color":"#b074a0"}],"tmpValue":3.500023,"_color":"#6ee167"},{"name":"y","values":[{"time":0.1,"value":0,"_color":"#abac31","tween":"quadEaseOut"},{"time":0.5,"value":-1.000001,"_color":"#355ce8","tween":"quadEaseIn"},{"time":1.1,"value":0,"_color":"#47e90","tween":"quadEaseOut"},{"time":1.7,"value":-0.5,"_color":"#f76bca","tween":"quadEaseOut"},{"time":2.3,"value":0,"_color":"#d59cfd"}],"tmpValue":-0.5,"_color":"#8bd589"},{"name":"rotate","values":[{"time":0.1,"value":-25.700014000000003,"_color":"#f50ae9","tween":"quadEaseInOut"},{"time":2.8,"value":0,"_color":"#2e3712"}],"tmpValue":-25.700014000000003,"_color":"#2d9f57"}]});
-
-// timeliner.load({"version":"1.3.0","modified":"Tue Dec 16 2014 10:27:28 GMT+0800 (SGT)","title":"Untitled","layers":[{"name":"a","values":[],"_value":0,"_color":"#9ab426"}],"name":"simple"});
 
 function animate() {
 	requestAnimationFrame(animate);
 
-	var w2 = window.innerWidth / 2;
-	var h2 = window.innerHeight / 2;
+	let objects = timeliner.getObjetActions();
+	for (const o in objects ){
+		let oa = objects[o];
+		if(oa.e){
+			for (const a in oa.actions){
+				let p = oa.actions[a];
+				if(p.styles.nb){
+					let slct = d3.select(oa.e);
+					for (const s in p.styles){
+						slct.style(s,p.styles[s]);
+					}
+				}else{
+					switch (a) {
+						case 'maFonction':
+							montreOmkItem(o, p);					
+							break;			
+						default:
+							let nv = p.text ? p.text : p.val;
+							//on ne change que si la valeur est différente
+							//pour éviter les chargements multiples
+							if(oa.e.getAttribute(p.prop)!=nv)oa.e.setAttribute(p.prop,nv);
+							break;
+					}
+				}
+				//console.log(oa);
+			}
+		}
+	}
 
-	box.style.transform = 'translateX(' +  (target.x * 100 + w2) + 'px) translateY(' + (target.y * 100 + h2) + 'px) rotate(' + target.rotate * 50 + 'deg)';
 }
 
+
+
 animate();
+
+let omkItems = [];
+let omkProps = ['genstory:hasActant','genstory:hasAffect','genstory:hasEvenement','genstory:hasLieu','genstory:hasObjet']
+function montreOmkItem(id, params) {
+	if(!omkItems[params.text]){
+		omkItems[params.text]={'item':null,'div':null};
+		d3.json(params.text).then(function(item){
+			omkItems[params.text].item = item;
+			omkItems[params.text].div = d3.select('#'+id);
+			omkItems[params.text].div.append('h1').html(item['o:title']);
+			let props = omkItems[params.text].div.data(omkProps).join('div');
+			props.selectAll('.property').data(d=>{
+					let dt = Array.from(d3.group(item[d], p => p['property_label']))
+					return dt;
+				}).join('div').attr('class','property').html(s=>{
+					return s[0]+' : '
+				}).selectAll('.value')
+				.data(d=>d[1]).join('span').attr('class','value').html(s=>{
+					return s['@value']+' - ';
+				});
+		})
+	}
+}
 
 </script>
 </body>
